--- a/BlazorTool.Client/Pages/ChangelogPage.razor
+++ b/BlazorTool.Client/Pages/ChangelogPage.razor
@@ -7,11 +7,11 @@
 {
     <div class="changelog-content">
         <div class="full-width-container flex flex-col md:flex-row">
-            <div class="w-full md:w-1/2 bg-blue-100 flex items-center justify-center p-4 border-r-2 border-blue-300 md:border-b-0 border-b-2 overflow-hidden">
+            <div class="w-full md:w-1/2 bg-blue-100 p-4">
                 <pre>@changelogContent</pre>
             </div>
 
-            <div class="w-full md:w-1/2 bg-green-100 flex items-center justify-center p-4 overflow-hidden">
+            <div class="w-full md:w-1/2 bg-green-100 p-4">
                 <pre>@changelogContent_PL</pre>
             </div>
         </div>
