--- a/BlazorTool.Client/Pages/OrdersPage.razor
+++ b/BlazorTool.Client/Pages/OrdersPage.razor
@@ -99,7 +99,7 @@ else
                    CloseOnOverlayClick="true"
                    Modal="true"
                    Width="1280px"
-    >
+                   MaxHeight="95vh">
         <WindowTitle>
         </WindowTitle>
         <WindowContent>
