Add filter WO_state OrdersPage fix logic of filtering OrdersPage add labels for filters

--- a/BlazorTool.Client/Pages/OrdersPage.razor
+++ b/BlazorTool.Client/Pages/OrdersPage.razor
@@ -56,6 +56,13 @@
                              ValueChanged="@((string cat) => OnTypeChanged(cat))">
             </TelerikComboBox>
         </div>
+    <div>
+        <TelerikComboBox Data="@workOrderStates"
+                         Placeholder="Select state..."
+                         ValueChanged="@((string state) => OnStateChanged(state))"
+                         ShowClearButton="false" Filterable="true">
+        </TelerikComboBox>
+</div>
 </div>
 }
 
@@ -228,6 +235,12 @@ else
     {
         selectedDevices = devices.Where(d => selectedDeviceIds.Contains(d.MachineID)).ToList();
         await LoadData(); 
+    }
+
+    void OnStateChanged(string? state)
+    {
+        selectedWorkOrderState = state;
+        ApplyFilters();
     }
 
     async Task OnCategoryChanged(string? category)
